Update env.example to clarify .env file structure

--- a/env.example
+++ b/env.example
@@ -1,9 +1,9 @@
-# Supabase Configuration
+# Frontend Environment Variables (.env in project root)
 # Get these from: https://app.supabase.com/project/_/settings/api
 VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your_anon_key_here
 
-# Backend Email Server (in server/.env)
+# Backend Environment Variables (server/.env)
 # RESEND_API_KEY=your_resend_api_key_here
 # FROM_EMAIL=onboarding@resend.dev
 # PORT=3001
