--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cd server && npm install",
     "preview": "vite preview",
+    "start": "node start-production.js",
     "server": "cd server && npm start",
     "server:dev": "cd server && npm run dev"
   },
@@ -29,6 +30,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.561.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "serve": "^14.2.1",
+    "express": "^4.18.2",
+    "resend": "^3.2.0",
+    "dotenv": "^16.4.5",
+    "cors": "^2.8.5"
   }
 }
