Simplify production server - single Express app
- Replace dual-server approach with unified Express server
- Serve static files AND API routes from one server
- No need for proxy or multiple processes
- Server handles both frontend and email API
- Listens on PORT for Railway compatibility
- Fixes 405 errors by properly handling /api/* routes

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cd server && npm install",
+    "build": "vite build",
     "preview": "vite preview",
-    "start": "node start-production.js",
+    "start": "node server-production.js",
     "server": "cd server && npm start",
     "server:dev": "cd server && npm run dev"
   },
