--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "express": "^4.18.2",
     "resend": "^3.2.0",
     "dotenv": "^16.4.5",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "stripe": "^14.14.0"
   }
 }
 
