Fix app URL redirects to use app.olliehours.com subdomain
- Add APP_URL environment variable for app subdomain
- Update all website links to redirect to app.olliehours.com
- Update Stripe checkout success URL to use APP_URL
- Auth page now defaults to signup when coming from checkout or signup links
- Add signup=true query param to 'Get Started' buttons

--- a/env.example
+++ b/env.example
@@ -8,4 +8,9 @@ VITE_SUPABASE_ANON_KEY=your_anon_key_here
 # FROM_EMAIL=onboarding@resend.dev
 # PORT=3001
 # FRONTEND_URL=http://localhost:5173
+# APP_URL=https://app.olliehours.com
+
+# Stripe (for payments)
+# STRIPE_SECRET_KEY=sk_live_... or sk_test_...
+# STRIPE_WEBHOOK_SECRET=whsec_... (optional, for webhooks)
 
